--- a/write_up/write-up.bib
+++ b/write_up/write-up.bib
@@ -1,4 +1,4 @@
-@article{schafer2002missing,
+@article{schafer,
   title={Missing data: our view of the state of the art.},
   author={Schafer, Joseph L and Graham, John W},
   journal={Psychological methods},
@@ -9,7 +9,7 @@
   publisher={American Psychological Association}
 }
 
-@article{seaman2013review,
+@article{seaman,
   title={Review of inverse probability weighting for dealing with missing data},
   author={Seaman, Shaun R and White, Ian R},
   journal={Statistical methods in medical research},
@@ -20,7 +20,7 @@
   publisher={Sage Publications Sage UK: London, England}
 }
 
-@article{weaver2005estimated,
+@article{weaver,
   title={An estimated likelihood method for continuous outcome regression models with outcome-dependent sampling},
   author={Weaver, Mark A and Zhou, Haibo},
   journal={Journal of the American Statistical Association},
@@ -31,7 +31,7 @@
   publisher={Taylor \& Francis}
 }
 
-@article{white2010bias,
+@article{white,
   title={Bias and efficiency of multiple imputation compared with complete-case analysis for missing covariate values},
   author={White, Ian R and Carlin, John B},
   journal={Statistics in medicine},
@@ -42,7 +42,7 @@
   publisher={Wiley Online Library}
 }
 
-@article{zhao1992designs,
+@article{zhao,
   title={Designs and analysis of two-stage studies},
   author={Zhao, LP and Lipsitz, S},
   journal={Statistics in medicine},
